# ChangeLog for dev-cpp/glibmm
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.29 2005/05/08 22:02:23 agriffis Exp $

  08 May 2005; Aron Griffis <agriffis@gentoo.org> glibmm-2.4.7-r1.ebuild:
  stable on ia64

  08 May 2005; Bryan Østergaard <kloeri@gentoo.org> glibmm-2.4.7-r1.ebuild:
  ~ia64 keyword.

  08 May 2005; Marcus D. Hanwell <cryos@gentoo.org> glibmm-2.4.7-r1.ebuild:
  Marked stable on amd64 and x86.

  03 May 2005; Aaron Walker <ka0ttic@gentoo.org> glibmm-2.6.1.ebuild:
  Apply changes (doc fixes) previously made to 2.4.7-r1 to the 2.6.1 ebuild.

*glibmm-2.4.7-r1 (27 Apr 2005)

  27 Apr 2005; Aaron Walker <ka0ttic@gentoo.org> -glibmm-2.4.7.ebuild,
  +glibmm-2.4.7-r1.ebuild:
  Revision bump; don't build the examples, only install API reference if
  USE=doc and even then at least install it in the right place.

  10 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> glibmm-2.4.7.ebuild,
  glibmm-2.6.1.ebuild:
  Added ~hppa back to KEYWORDS, as it seems they got dropped by mistake.

*glibmm-2.6.1 (10 Apr 2005)

  10 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> -glibmm-2.4.1.ebuild,
  -glibmm-2.4.3.ebuild, +glibmm-2.6.1.ebuild:
  Version bump, removed old ebuilds.

  28 Mar 2005; Guy Martin <gmsoft@gentoo.org> glibmm-2.4.4.ebuild:
  Stable on hppa.

  26 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> glibmm-2.4.7.ebuild:
  Add ~alpha keyword.

  20 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> glibmm-2.4.4.ebuild:
  Stable on ppc.

*glibmm-2.4.7 (17 Mar 2005)

  17 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org> +glibmm-2.4.7.ebuild:
  Version bump, closes bug 79888.

  16 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> glibmm-2.4.4.ebuild:
  Stable on sparc

  17 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org> glibmm-2.4.4.ebuild:
  Marked stable on x86 and amd64.

  05 Mar 2005; Markus Rothe <corsair@gentoo.org> glibmm-2.4.4.ebuild: