@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/glibmm/Attic/glibmm-2.4.7-r1.ebuild,v 1.4 2005/05/08 22:02:23 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/glibmm/Attic/glibmm-2.4.7-r1.ebuild,v 1.5 2005/05/09 17:26:47 gustavoz Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://gtkmm.sourceforge.net/"
 
 LICENSE="LGPL-2.1"
 SLOT="2"
-KEYWORDS="~alpha amd64 ~hppa ia64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="~alpha amd64 ~hppa ia64 ~ppc ~ppc64 sparc x86"
 IUSE="doc"
 
 DEPEND="${RDEPEND}
