@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/gtkmm/Attic/gtkmm-2.4.11.ebuild,v 1.5 2005/05/08 22:15:09 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/gtkmm/Attic/gtkmm-2.4.11.ebuild,v 1.6 2005/05/09 17:29:31 gustavoz Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://gtkmm.sourceforge.net/"
 
 LICENSE="LGPL-2.1"
 SLOT="2.4"
-KEYWORDS="amd64 ~hppa ia64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="amd64 ~hppa ia64 ~ppc ~ppc64 sparc x86"
 IUSE=""
 G2CONF="--disable-examples --disable-demos"
 
