@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gtkmm
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.66 2005/05/08 22:15:09 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.67 2005/05/09 17:29:31 gustavoz Exp $
+
+  09 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> gtkmm-2.4.11.ebuild:
+  Stable on sparc
 
   08 May 2005; Aron Griffis <agriffis@gentoo.org> gtkmm-2.4.11.ebuild:
   stable on ia64
