@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/glibmm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.29 2005/05/08 22:02:23 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.30 2005/05/09 17:26:47 gustavoz Exp $
+
+  09 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  glibmm-2.4.7-r1.ebuild:
+  Stable on sparc
 
   08 May 2005; Aron Griffis <agriffis@gentoo.org> glibmm-2.4.7-r1.ebuild:
   stable on ia64
